[package]
name = "ziprand"
version = "0.1.2"
edition = "2024"
description = "A lightweight library for random access reading of uncompressed (STORED) ZIP files with async support"
repository = "https://github.com/rhythmcache/libziprand"
license = "Apache-2.0"
homepage = "https://github.com/rhythmcache/libziprand"
keywords = ["zip", "archive", "random", "seek", "async"]
categories = ["filesystem", "compression", "asynchronous"]

include = [
    "src/lib.rs",
    "LICENSE",
    "Cargo.toml"
]

[dependencies]
async-trait = { version = "0.1.89", optional = true }
eyre = "0.6.12"

[features]
async = ["dep:async-trait"]
